feat: add `attendance_period` endpoint impl
